deploy/kustomize/overlays/local-depends/ing-temporal-ui.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.22.17-standalone/ingress-networking-v1.json

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: temporal-ui
  namespace: temporal-pg13
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: temporal.local.lco.earth
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: temporal-ui
                port:
                  name: http
